[tool.poetry]
name = "shanyraq"
version = "0.1.0"
description = ""
authors = ["Zhaka <shingis.zhansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
attrs = "^25.4.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
alembic = "^1.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
